logs/dag_id=1Training_DAG_V1.0/run_id=manual__2024-02-13T080229.329395+0000/task_id=create_db_schem/attempt=1.log
[2024-02-13T08:02:33.910+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: 1Training_DAG_V1.0.create_db_schem manual__2024-02-13T08:02:29.329395+00:00 [queued]>
[2024-02-13T08:02:33.921+0000] {taskinstance.py:1956} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: 1Training_DAG_V1.0.create_db_schem manual__2024-02-13T08:02:29.329395+00:00 [queued]>
[2024-02-13T08:02:33.923+0000] {taskinstance.py:2170} INFO - Starting attempt 1 of 1
[2024-02-13T08:02:33.944+0000] {taskinstance.py:2191} INFO - Executing <Task(PostgresOperator): create_db_schem> on 2024-02-13 08:02:29.329395+00:00
[2024-02-13T08:02:33.950+0000] {standard_task_runner.py:60} INFO - Started process 962 to run task
[2024-02-13T08:02:33.954+0000] {standard_task_runner.py:87} INFO - Running: ['***', 'tasks', 'run', '1Training_DAG_V1.0', 'create_db_schem', 'manual__2024-02-13T08:02:29.329395+00:00', '--job-id', '11136', '--raw', '--subdir', 'DAGS_FOLDER/traning_dag.py', '--cfg-path', '/tmp/tmpeovah_wo']
[2024-02-13T08:02:33.956+0000] {standard_task_runner.py:88} INFO - Job 11136: Subtask create_db_schem
[2024-02-13T08:02:34.010+0000] {task_command.py:423} INFO - Running <TaskInstance: 1Training_DAG_V1.0.create_db_schem manual__2024-02-13T08:02:29.329395+00:00 [running]> on host 06573eafe810
[2024-02-13T08:02:34.091+0000] {taskinstance.py:2480} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='1Training_DAG_V1.0' AIRFLOW_CTX_TASK_ID='create_db_schem' AIRFLOW_CTX_EXECUTION_DATE='2024-02-13T08:02:29.329395+00:00' AIRFLOW_CTX_TRY_NUMBER='1' AIRFLOW_CTX_DAG_RUN_ID='manual__2024-02-13T08:02:29.329395+00:00'
[2024-02-13T08:02:34.092+0000] {sql.py:276} INFO - Executing: 
        CREATE TABLE IF NOT EXISTS Training(
            city varchar,
            )
[2024-02-13T08:02:34.106+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-02-13T08:02:34.132+0000] {base.py:83} INFO - Using connection ID 'postgres_localhost' for task execution.
[2024-02-13T08:02:34.151+0000] {sql.py:450} INFO - Running statement: 
        CREATE TABLE IF NOT EXISTS Training(
            city varchar,
            ), parameters: None
[2024-02-13T08:02:34.161+0000] {taskinstance.py:2698} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/models/taskinstance.py", line 433, in _execute_task
    result = execute_callable(context=context, **execute_callable_kwargs)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 282, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 398, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 455, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 4:             )
                    ^

[2024-02-13T08:02:34.178+0000] {taskinstance.py:1138} INFO - Marking task as FAILED. dag_id=1Training_DAG_V1.0, task_id=create_db_schem, execution_date=20240213T080229, start_date=20240213T080233, end_date=20240213T080234
[2024-02-13T08:02:34.193+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 11136 for task create_db_schem (syntax error at or near ")"
LINE 4:             )
                    ^
; 962)
[2024-02-13T08:02:34.207+0000] {local_task_job_runner.py:234} INFO - Task exited with return code 1
[2024-02-13T08:02:34.232+0000] {taskinstance.py:3280} INFO - 0 downstream tasks scheduled from follow-on schedule check
